[gd_scene load_steps=2 format=3 uid="uid://cqksetty2la4q"]

[ext_resource type="Script" uid="uid://c64vrufdjk768" path="res://src/ui/test_screen.gd" id="1_ms8vr"]

[node name="TestScreen" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -85.5
offset_right = 191.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ms8vr")

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Recognizing..."
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="ScoreLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"

[node name="ScoreField" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.0"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
